# AI-Hyperfarm-Bot-No-Code

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  build.bat  config.json
.kiro/specs/ai-hyperfarm-bot/: design.md  requirements.md  tasks.md
include/action/: action_layer.h
include/capture/: capture_layer.h
include/core/: config.h  coordinates.h  layer_interface.h  types.h  worker_interface.h
include/perception/: perception_layer.h
include/ui/: manager_ui.h
models/: README.md
src/: main.cpp
src/action/: action_layer.cpp
src/capture/: capture_layer.cpp
src/core/: config.cpp  coordinates.cpp
src/perception/: perception_layer.cpp
src/ui/: manager_ui.cpp
templates/: README.md
tests/: CMakeLists.txt  QUICK_START.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  build_and_run_tests.bat  test_coordinates.cpp
